# utility-bills

./: .gitignore  LICENSE  README.md  pyproject.toml  test_settings.py
docs/: ARCHITECTURE.md  DASHBOARD_STATS.md  DATA_MODEL.md  INTEGRATION.md  OCR_FLOW.md  SOLAR_NET_METERING.md
example/: .gitignore  manage.py  settings.py  urls.py  wsgi.py
utility_bills/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
utility_bills/migrations/: 0001_initial.py
utility_bills/parsers/: electricity_parser.py  water_parser.py
utility_bills/services/: classifiers.py  normalizers.py  ocr_engine.py
utility_bills/templates/utility_bills/: base.html  bill_add.html  bill_detail.html  dashboard.html  meter_add.html  meters_list.html  ocr_result.html  ocr_upload.html
